--- a/index.html
+++ b/index.html
@@ -1,1 +1,196 @@
-Hello World
+<!DOCTYPE html>
+<!--
+	Story by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+  <head>
+    <title>Story by HTML5 UP</title>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, user-scalable=no"
+    />
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <noscript
+      ><link rel="stylesheet" href="assets/css/noscript.css"
+    /></noscript>
+  </head>
+  <body class="is-preload">
+    <!-- Wrapper -->
+    <div id="wrapper" class="divided">
+      <!-- One -->
+      <section
+        class="
+          banner
+          style1
+          orient-left
+          content-align-left
+          image-position-right
+          fullscreen
+          onload-image-fade-in onload-content-fade-right
+        "
+      >
+        <div class="content">
+          <h1>Hi!</h1>
+          <p class="major">
+            I'm Johann, an aspiring software developer from Munich, Germany,
+            currently based in Manchester, UK. Most recently, I've completed a
+            coding bootcamp with
+            <a href="https://northcoders.com/">Northcoders</a>. Feel free to
+            have a poke around my projects below, or get in touch!
+          </p>
+          <ul class="icons">
+            <li>
+              <a
+                href="mailto:hannerth94@gmail.com"
+                class="button small smooth-scroll-middle"
+                >EMAIL</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://github.com/LastJohahn/"
+                class="button small smooth-scroll-middle"
+                >GITHUB</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://uk.linkedin.com/in/johann-hannerth"
+                class="button small smooth-scroll-middle"
+                >LINKEDIN</a
+              >
+            </li>
+          </ul>
+        </div>
+        <div class="image">
+          <img src="images/jan-antonin-kolar-8QJSi37vhms-unsplash.jpg" alt="" />
+        </div>
+      </section>
+
+      <!-- Two -->
+      <section
+        class="
+          spotlight
+          style1
+          orient-right
+          content-align-left
+          image-position-center
+          onscroll-image-fade-in
+        "
+        id="first"
+      >
+        <div class="content">
+          <h2>NC GAMES</h2>
+          <p>
+            My first frontend project with React! Started during the Northcoders
+            course and finished up and polished after graduating; I challenged
+            myself to only use pure CSS without libraries for the styling
+            because that was something I wanted more practice with.
+          </p>
+          <ul class="icons">
+            <li>
+              <a href="https://github.com/LastJohahn/nc-games" class="button"
+                >Github</a
+              >
+            </li>
+            <li>
+              <a href="https://nc-games-lastjohahn.netlify.app/" class="button"
+                >Hosted version</a
+              >
+            </li>
+          </ul>
+        </div>
+        <div class="image">
+          <img src="images/Screenshot from 2021-11-03 13-52-41.png" alt="" />
+        </div>
+      </section>
+
+      <!-- Three -->
+      <section
+        class="
+          spotlight
+          style1
+          orient-left
+          content-align-left
+          image-position-center
+          onscroll-image-fade-in
+        "
+      >
+        <div class="content">
+          <h2>NC GAMES BACKEND</h2>
+          <p>
+            I also began this API during the course and finished and polished it
+            up after graduation. Learning how to use PSQL and integrate it with
+            Javascript for this aspect of the project was probably my favourite
+            part of it!
+          </p>
+          <ul class="icons">
+            <li>
+              <a
+                href="https://github.com/LastJohahn/nc-games-backend"
+                class="button"
+                >Github</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://nc-games-api-lastjohahn.herokuapp.com/api"
+                class="button"
+                >Hosted version</a
+              >
+            </li>
+          </ul>
+        </div>
+        <div class="image">
+          <img src="images/Screenshot from 2021-11-03 14-06-42.png" alt="" />
+        </div>
+      </section>
+
+      <!-- Footer -->
+      <footer class="wrapper style1 align-center">
+        <div class="inner">
+          <ul class="icons">
+            <li>
+              <a
+                href="mailto:hannerth94@gmail.com"
+                class="icon style2 fa-envelope"
+                ><span class="label">Email</span></a
+              >
+            </li>
+            <li>
+              <a
+                href="https://github.com/LastJohahn/"
+                class="icon brands style2 fa-github"
+                ><span class="label">Github</span></a
+              >
+            </li>
+            <li>
+              <a
+                href="https://uk.linkedin.com/in/johann-hannerth"
+                class="icon brands style2 fa-linkedin-in"
+                ><span class="label">LinkedIn</span></a
+              >
+            </li>
+          </ul>
+          <p>
+            &copy; Untitled. Images:
+            <a href="https://unsplash.com/">UNSPLASH</a> Design:
+            <a href="https://html5up.net">HTML5 UP</a>.
+          </p>
+        </div>
+      </footer>
+    </div>
+
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.scrollex.min.js"></script>
+    <script src="assets/js/jquery.scrolly.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
+  </body>
+</html>
