--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>JOHANN'S PORTFOLIO</title>
+    <title>Johann's portfolio</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
