adds patience game as project

--- a/index.html
+++ b/index.html
@@ -51,6 +51,29 @@
     </div>
 </section>
 
+<section class="project patience">
+  <div class="content">
+    <h2>PATIENCE GAME</h2>
+    <p>
+      A solitaire-style game that is commonly played in my family that I could never find online anywhere, so I decided to make my own!
+      In fact, being able to one day make this game playable on the go for my family and I was one of the main motivators for me to get into
+      coding in the first place. I am very happy to have it finished and hosted here and I would love it if you gave it a try. But I must warn you:
+      Like many other styles of solitaire, most games cannot be won. 
+    </p>
+    <ul class="buttons">
+      <li>
+        <a href="https://github.com/LastJohahn/patience-game" class="button">Github</a>
+      </li>
+      <li>
+        <a href="https://sparkly-mousse-430f64.netlify.app/" class="button">Play here!</a>
+      </li>
+    </ul>
+  </div>
+    <div class="image">
+      <img src="images/Screenshot 2022-10-19 at 17.14.13.png" alt="a screenshot of the game">
+    </div>
+</section>
+
 <section class="project first">
   <div class="content">
     <h2>NC GAMES</h2>
