updates hosted link for nc games backend

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     </li>
     <li>
       <a
-        href="https://nc-games-api-lastjohahn.herokuapp.com/api"
+        href="https://nc-games-backend-b7fc.onrender.com/api"
         class="button"
         >Hosted version</a
       >
